# modern-data-pipeline

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: pipeline-ci.yml
dashboard/: evidence.config.yaml  evidence.plugins.yaml  package.json
dashboard/pages/: index.md  languages.md  trending.md
dashboard/sources/github_trends/: connection.yaml  mart_language_trends.sql  mart_trending_repos.sql
pipeline/: __init__.py  extract.py  flows.py  load.py
scripts/: run_extract.py
transform/dbt_pipeline/: .user.yml  dbt_project.yml  profiles.yml
transform/dbt_pipeline/models/marts/: mart_language_trends.sql  mart_trending_repos.sql
transform/dbt_pipeline/models/staging/: _sources.yml  stg_languages.sql  stg_repos.sql
